# forecasting-frontier-language-model-agent-capabilities

./: README.md  index.html  vite.config.ts
unelicited_agent/: .gitignore  README.md  compute_average_score.py  join_entries.py  list_log_entry.py  pyproject.toml  run_cybench_full_claude21.sh  run_cybench_full_claude3opus.sh  run_cybench_full_claude3sonnet.sh  run_cybench_full_claude_new.sh  run_cybench_full_claude_old.sh  run_cybench_full_gpt35turbo.sh  run_cybench_full_gpt4o.sh  run_cybench_full_gpt4omini.sh  run_cybench_full_gpt4turbo.sh  run_cybench_full_llama31_405b.sh  run_cybench_full_llama31_70b.sh  run_cybench_full_llama31_8b.sh  run_cybench_full_o1.sh  run_cybench_full_o1mini.sh  run_cybench_full_qwen25_32b.sh  run_cybench_full_qwen25_72b.sh  run_cybench_full_qwen25_7b.sh  run_swebench_full_claude21.sh  run_swebench_full_claude3opus.sh  run_swebench_full_claude3sonnet.sh  run_swebench_full_claude_new.sh  run_swebench_full_claude_old.sh  run_swebench_full_gpt35turbo.sh  run_swebench_full_gpt4o.sh  run_swebench_full_gpt4omini.sh  run_swebench_full_gpt4turbo.sh  run_swebench_full_llama31_405b.sh  run_swebench_full_llama31_70b.sh  run_swebench_full_llama31_8b.sh  run_swebench_full_o1.sh  run_swebench_full_o1mini.sh  run_swebench_full_qwen25_32b.sh  run_swebench_full_qwen25_72b.sh  run_swebench_full_qwen25_7b.sh  (+4 more)
unelicited_agent/src/bash_minimal/: Agent.py  solver.py  templates.py
unelicited_agent/tasks/: cybench_full.py  edit_task.py  swebench_verified_full.py  swebench_verified_subset.py  task.py
unelicited_agent/tasks/samples/: django__django-10097.json  (+6 more)
(+90 files in other folders)
