[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bash_minimal"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "inspect_ai @ git+https://github.com/UKGovernmentBEIS/inspect_ai",
    "inspect_evals[swe_bench] @ git+https://github.com/UKGovernmentBEIS/inspect_evals",
]
